# Campus-Recruitment-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/environments/: environment.toml
apps/cli/: main.py
configs/: local.example.yaml
docs/: README.md
docs/00_project/: glossary.md  project-charter.md  roadmap.md
docs/01_architecture/: agent-architecture.md
docs/02_development/: coding-standards.md  definition-of-done.md  dev-workflow.md  git-workflow.md  testing-strategy.md
docs/03_requirements/: README.md  v0.1-implementation-tasks.md  v0.1-mini-runtime.md  v0.2-implementation-tasks.md  v0.2-llm-provider.md  v0.3-evidence-domain-foundation.md  v0.3-implementation-tasks.md  v0.4-candidate-profile-graph.md  v0.4-implementation-tasks.md  v0.5-implementation-tasks.md  v0.5-role-profile-graph.md
docs/04_rfc/: 0001-mini-agent-runtime.md  0002-llm-provider-and-structured-output.md  0003-evidence-domain-foundation.md  0004-candidate-profile-graph.md  0005-role-profile-graph.md  rfc-template.md
docs/05_adr/: 0001-use-langgraph-for-runtime.md  0002-use-llm-provider-abstraction-for-structured-output.md  0003-adopt-evidence-driven-dual-profile-architecture.md  0004-use-stateful-candidate-profile-subgraph.md  0005-separate-source-channels-and-role-profile-levels.md  adr-template.md
docs/06_contracts/: candidate-profile-contract.md  evidence-contract.md  human-interaction-contract.md  llm-output-contract.md  role-profile-contract.md  source-collection-contract.md  state-schema.md  tool-contract.md
docs/07_evaluation/: eval-datasets.md  eval-metrics.md  eval-report-template.md  v0.3-eval-report.md  v0.4-eval-report.md  v0.5-boss-zhipin-scraper-evaluation.md  v0.5-eval-report.md  v0.5-p1-browser-smoke-report.md  v0.5-source-feasibility-report.md
docs/08_deployment/: cloud-deployment.md  local-dev.md  security-and-secrets.md
scripts/evals/: v05_confirmed_identity_acceptance.py  v05_live_acceptance.py  v05_live_auth_resume.py
src/: sitecustomize.py
(+128 files in other folders)
