[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-job-agent"
version = "0.1.0"
description = "Mini Agent Runtime for campus job intelligence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
