[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-job-agent"
version = "0.4.0"
description = "Evidence-driven candidate profile Graph for campus job intelligence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-sqlite>=3.1,<4",
  "pydantic>=2.13,<3",
  "pypdf>=6.14,<7",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
campus_job_agent = ["storage/migrations/*.sql", "ontology/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-p", "no:langsmith_plugin", "-p", "no:anyio"]
